---------------------------------------------------------------------------
Version 6.1.3  [DEVEL] (rgerhards), 2010-12-??
- added $IMUDPSchedulingPolicy and $IMUDPSchedulingPriority config settings
- added $LocalHostName config directive
- improved tcpsrv performance by enabling multiple-entry epoll
  so far, we always pulled a single event from the epoll interface. 
  Now 128, what should result in performance improvement (less API
  calls) on busy systems. Most importantly affects imtcp.
- bugfix: fixed build problems on some platforms
  namely those that have 32bit atomic operations but not 64 bit ones
- bugfix: local hostname was pulled too-early, so that some config 
  directives (namely FQDN settings) did not have any effect
- enhanced tcpflood to support multiple sender threads
  this is required for some high-throughput scenarios (and necessary to
  run some performance tests, because otherwise the sender is too slow).
---------------------------------------------------------------------------
Version 6.1.2  [DEVEL] (rgerhards), 2010-12-16
- added experimental support for log normalizaton (via liblognorm)
  support for normalizing log messages has been added in the form of
  mmnormalize. The core engine (property replacer, filter engine) has
  been enhanced to support properties from normalized events.
  Note: this is EXPERIMENTAL code. It is currently know that
  there are issues if the functionality is used with
  - disk-based queues
  - asynchronous action queues
  You can not use the new functionality together with these features.
  This limitation will be removed in later releases. However, we 
  preferred to release early, so that one can experiment with the new
  feature set and accepted the price that this means the full set of
  functionality is not yet available. If not used together with
  these features, log normalizing should be pretty stable.
- enhanced testing tool tcpflood
  now supports sending via UDP and the capability to run multiple