@@ -1,3 +1,6 @@
+- improved TLS error reporting
+- improved TLS startup (Diffie-Hellman bits do not need to be generated,
+  as we do not support full anon key exchange -- we always need certs)
 ---------------------------------------------------------------------------
 Version 6.1.3  [DEVEL] (rgerhards), 2010-12-??
 - added $IMUDPSchedulingPolicy and $IMUDPSchedulingPriority config settings
